Small fixes: ContentEditableField#shift-tab sets _focusedField with object notation instead of string. Fix styling on node-icon (removed height css)

--- a/app/assets/stylesheets/humon/detail.css.scss
+++ b/app/assets/stylesheets/humon/detail.css.scss
@@ -23,12 +23,11 @@ span.node-detail  {
 }
 
 span.node-detail.node-icon {
-  $nodeIconHeight: 14px;
-  height: $nodeIconHeight;
+  $nodeIconSize: 14px;
   width: 10px;
-  font-size: $nodeIconHeight;
+  font-size: $nodeIconSize;
   position: relative;
-  top: $lineheight - $nodeIconHeight;
+  top: ($nodeCopyFontSize - $nodeIconSize);
 
   i.icon {
     height: 10px;
